--- a/portfolio2023_vite/src/scss/reset.scss
+++ b/portfolio2023_vite/src/scss/reset.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/* reset; ~ 2023. 02. */
+/* reset; ~ 2023. 03. */
 :root {-webkit-tap-highlight-color:transparent;  text-size-adjust: none; overflow-wrap:break-word; word-break:break-word;}
 *, *:before, *:after {border:0; margin:0; padding:0; box-sizing:border-box;}
 *:before, *:after {border:0; margin:0; padding:0; box-sizing:border-box;}
@@ -32,9 +32,10 @@ html {width:100%; font-size:10px; font-family:'Noto Sans KR', '맑은 고딕', '
 body {width:100%; position:relative;  background:none;}
 
 /* Text */
-h1, h2, h3, h4, h5, h6 {font-weight:500;margin:0;padding:0;}
+h1, h2, h3, h4, h5, h6 {font-weight:500; margin:0; padding:0;}
 strong, b {font-weight:700;}
-p, span, i, sup, sub, del, ins, s {font-weight:400; word-break:keep-all;margin:0;padding:0;}
+p, span, i, sup, sub, del, ins, s {word-break:keep-all; margin:0; padding:0;}
+span, i {word-break:keep-all; margin:0; padding:0;}
 i, address, cite, em, q {font-weight:400; font-style:normal;}
 blockquote, abbr, dfn {font-weight:400;}
 pre, code, samp, kbd, var {font-family:'Consolas', 'Monaco', 'Menlo', 'DejaVu Sans Mono', monospace;}
