페이지 전환 효과 테스트

--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -20,14 +20,17 @@ $wrap_padding: 80px;
 
 html {
   width:100%;
+  height:100%;
 }
 body {
   width:100%;
+  min-height:100%;
   background: #1a1a1a;
 }
 
 .page-container {
   width:100%;
+  min-height:100%;
 }
 .page-header {
   width:100%;
