--- a/portfolio2023_vite/src/scss/sample.scss
+++ b/portfolio2023_vite/src/scss/sample.scss
@@ -102,3 +102,107 @@
     }
   }
 }
+
+
+.project-item {
+  width:calc(50% - 40px);
+  height:480px;
+  padding:64px;
+  border-radius:64px;
+  border:1px solid #5a5a5a;
+  background: #1f1f1f;
+  
+  .project-item-inner {
+    width:100%;
+    height:100%;
+    overflow: hidden;
+  }
+
+  .project-header {
+    width:100%;
+    margin-bottom:24px;
+    margin-top:-64px;
+  }
+  .project-arrow {
+    width:64px;
+    height:64px;
+    position:relative;
+    .arrow-line {
+      display:block;
+      width:140%;
+      height:1px;
+      border-radius: 1px;
+      background: white;
+      transform:translate(-50%,-50%) rotate(-45deg);
+      position:absolute;
+      top:50%;
+      left:calc(50% - 1px);
+    }
+    &:before, &:after {
+      content:'';
+      display:block;
+      width:50%;
+      height:1px;
+      border-radius:1px;
+      background: white;
+      position:absolute;
+      top:0;
+      right:1px;
+      transform-origin: right;
+    }
+    &:after {
+      transform:rotate(-90deg);
+    }
+  }
+  .project-name {
+    font-size:40px;
+    font-weight:700;
+    color:#9a9a9a;
+    line-height:56px;
+  }
+  .project-contents {
+    flex:1;
+  }
+  .project-comment {
+    font-size:16px;
+    font-weight:400;
+    color:#707070;
+    line-height:24px;
+  }
+  .project-part {
+    font-size:16px;
+    font-weight:300;
+    color:#707070;
+    line-height:16px;
+  }
+  .project-period {
+    font-size:16px;
+    font-weight:400;
+    color:#707070;
+    line-height:16px;
+  }
+  .period-bar {
+    width:48px;
+    height:1px;
+    margin:0 16px;
+    background: #5a5a5a;
+  }
+
+  &:hover {
+    .project-header {
+      height:100%;
+      margin:0;
+      transition:all 0.3s;
+      display:flex;
+      flex-direction: column;
+      .project-name {
+        margin-top:auto;
+        transition:all 0.3s;
+      }
+    }
+    .project-contents {
+      flex:0;
+      height:0;
+    }
+  }
+}
