--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -1,52 +1,41 @@
-$wrap_width: 1440px;
-$wrap_padding: 80px;
-
-:root {
-  --bg-color-basic: white;
-  --title-color-basic: #333;
-  --phrase-color-basic: #999;
-}
-@media (prefers-color-scheme: dark) {
-  :root {
-    --bg-color-basic: #1a1a1a;
-    --title-color-basic: #fff;
-    --phrase-color-basic: #ccc;
-    --text-color-basic: #fff;
-  }
-}
+@import './css_variable';
+@import './scss_global';
 
 * {
   font-family:'Noto Sans KR';
+  letter-spacing: rem(-1px);
 }
 
 html {
   width:100%;
   height:100%;
+  font-size:1vw;
 }
+
 body {
   width:100%;
   min-height:100%;
-  background: #1a1a1a;
+  background: var(--bg-color-0);
+}
+
+.side-padding {
+  padding: 0 rem($stdPadding);
 }
 
 .page-container {
   width:100%;
   min-height:100%;
 }
+
 .page-header {
   width:100%;
-  padding:80px 0;
-}
-.common-wrap {
-  width:100%;
-  // max-width:#{$wrap_width + $wrap_padding*2};
-  margin:0 auto;
-  padding:0 $wrap_padding;
+  padding:rem($stdPadding);
 }
 
 .current-time {
+  border-top:4px solid white;
   span {
-    font-size:20px;
+    font-size:$headerFontSize;
     font-weight:500;
     color:#9f9f9f;
   }
@@ -55,58 +44,38 @@ body {
 .gnb {
   margin-left:auto;
   .gnb-btn {
-    margin: 0 20px;
+    margin: 0 $headerFontSize;
     position:relative;
-    &::before, &:after {
-      content:'';
-      display:block;
-      width:0;
-      height:2px;
-      border-radius:1px;
-      background: white;
-      transform-origin: right;
-      position:absolute;
-      right:-16px;
-      top:calc(50% + 1px);
-      opacity:0;
-      transition: width 0.2s linear 0.15s, opacity 0.2s linear 0.15s;
-    }
-    &:before {
-      transform:rotate(45deg);
-    }
-    &:after {
-      transform:rotate(-45deg);
-    }
     span {
-      font-size:20px;
-      color:var(--text-color-basic);
+      font-size:$headerFontSize;
+      color:var(--text-color-0);
       font-weight:500;
-      &:before {
-        content:'';
-        display:block;
-        width:0;
-        height:2px;
-        border-radius:1px;
-        background: white;
-        position: absolute;
-        top:calc(50% + 1px);
-        right:-16px;
-        left:auto;
-        transition:width 0.3s;
-      }
     }
-    &:hover {
-      &:before, &:after {
-        opacity:1;
-        width:8px;
+  }
+}
+
+.page-visual {
+  width:100%;
+  height:100vh;
+  .page-title {
+    span {
+      font: {
+        size:rem(240px);
       }
-      span {
-        &:before {
-          left:0;
-          right:auto;
-          width:calc(100% + 16px);
-        }
+      line-height: rem(240px);
+      letter-spacing: rem(-12px);
+    }
+    .page-title-border-text {
+      font: {
+        weight:400;
+        family:'Noto Serif KR';
       }
+      color:transparent;
+      -webkit-text-stroke: 1px var(--text-color-2);
+    }
+    .page-title-filled-text {
+      font-weight:700;
+      color:var(--text-color-0);
     }
   }
 }
