다크 모드 적용, rem 단위 작업중

--- a/portfolio2023_vite/src/scss/_scss_global.scss
+++ b/portfolio2023_vite/src/scss/_scss_global.scss
@@ -1,12 +1,4 @@
-// common size
-$stdSize_pc: 2560px;
-$stdSize_m: 720px;
-$stdPadding: 80px;
-
-// header size
-$headerFontSize: 20px;
-
 // util
 @function rem($px) {
-  @return calc($px * 100rem / $stdSize_pc);
+  @return ($px / 20px) * 1rem;
 }
