--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -1,4 +1,7 @@
 :root {
+  --screen-size-x: 1920px;
+  --screen-size-y: 927px;
+
   // colors
   --bg-color-0: #fff;
   --bg-color-1: #f5f5f5;
@@ -6,21 +9,27 @@
   --bg-color-3: #a0a0a0;
   --bg-color-4: #707070;
   
-  --text-color-0: #333;
-  --text-color-1: #777;
-  --text-color-2: #ccc;
+  --text-color-6: #1a1a1a;
+  --text-color-1: #3a3a3a;
+  --text-color-2: #5a5a5a;
+  --text-color-3: #707070;
+  --text-color-4: #909090;
+  --text-color-5: #a0a0a0;
+  --text-color-6: #ccc;
 
   &.dark-theme {
     --bg-color-0: #1a1a1a;
     --bg-color-1: #3a3a3a;
-    --bg-color-2: #707070;
+    --bg-color-2: #5a5a5a;
+    --bg-color-3: #707070;
     
     --text-color-0: #fff;
-    --text-color-1: #ccc;
-    --text-color-2: #a0a0a0;
-    --text-color-3: #9f9f9f;
-    --text-color-4: #707070;
-    --text-color-5: #5a5a5a;
+    --text-color-1: #efefef;
+    --text-color-2: #ccc;
+    --text-color-3: #a0a0a0;
+    --text-color-4: #909090;
+    --text-color-5: #707070;
+    --text-color-6: #5a5a5a;
   }
 }
 
