레이아웃 작업 - 컨텐츠 내용 입력 - 프로젝트 데이터 관리 처리 - 공통 비주얼 레이아웃 정돈

--- a/portfolio2023_vite/src/scss/_scss_global.scss
+++ b/portfolio2023_vite/src/scss/_scss_global.scss
@@ -1,4 +1,4 @@
 // util
-@function rem($px) {
-  @return calc($px / 20px * 1rem);
+@function rem($px, $std: 20px) {
+  @return calc($px / $std * 1rem);
 }
