--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -1,13 +1,15 @@
 :root {
   --screen-size-x: 1920px;
   --screen-size-y: 927px;
+  --header-height: 208px;
 
   // colors
   --bg-color-0: #fff;
   --bg-color-1: #f5f5f5;
   --bg-color-2: #e3e3e3;
   --bg-color-3: #a0a0a0;
-  --bg-color-4: #707070;
+  --bg-color-4: #909090;
+  --bg-color-5: #707070;
   
   --text-color-6: #1a1a1a;
   --text-color-1: #3a3a3a;
@@ -17,11 +19,19 @@
   --text-color-5: #a0a0a0;
   --text-color-6: #ccc;
 
+  --header-icon-color: #909090;
+  --header-bg-color: #efefef;
+  --header-icon-hover-color: #5a5a5a;
+  --header-icon-active-color: #1a1a1a;
+  --theme-icon-active-color: #FFC700;
+  
   &.dark-theme {
     --bg-color-0: #1a1a1a;
     --bg-color-1: #3a3a3a;
     --bg-color-2: #5a5a5a;
     --bg-color-3: #707070;
+    --bg-color-4: #909090;
+    --bg-color-5: #a0a0a0;
     
     --text-color-0: #fff;
     --text-color-1: #efefef;
@@ -30,6 +40,12 @@
     --text-color-4: #909090;
     --text-color-5: #707070;
     --text-color-6: #5a5a5a;
+
+    --header-icon-color: #707070;
+    --header-bg-color: #3a3a3a;
+    --header-icon-hover-color: #ccc;
+    --header-icon-active-color: #fff;
+    --theme-icon-active-color: #FFD12D;
   }
 }
 
