--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -8,7 +8,16 @@
 html {
   width:100%;
   height:100%;
-  font-size:1vw;
+  font-size:16px;
+  @media only screen and (max-width:1600px) {
+    font-size:14px;
+  }
+  @media only screen and (max-width:1400px) {
+    font-size:1vw;
+  }
+  @media only screen and (max-width:460px) {
+    font-size:10px;
+  }
 }
 
 body {
@@ -41,10 +50,12 @@ path, rect, circle {
 
 .current-time {
   border-top:rem(4px) solid white;
-  span {
+  border-bottom:rem(4px) solid transparent;
+  padding:0 rem(40px) 0 rem(2px);
+  time {
     font-size:rem(20px);
     font-weight:500;
-    color:var(--text-color-0);
+    color:var(--text-color-4);
   }
 }
 
@@ -74,17 +85,46 @@ path, rect, circle {
   height:rem(48px);
   border-radius:rem(8px);
   transition:background-color .3s;
-  &:hover {
-    background: var(--bg-color-1);
-  }
-  .util-icon {
-    width:rem(24px);
-    height:rem(24px);
-    svg {
-      width:100%;
-      height:100%;
-      object-fit: contain;
+  .header-icon {
+    path, circle, rect {
+      fill: var(--header-icon-color);
     }
+  }
+  
+  &:hover {
+    background: var(--header-bg-color);
+    .header-icon {
+      path, circle, rect {
+        fill: var(--header-icon-hover-color);
+      }
+    }
+  }
+  &:active {
+    .header-icon {
+      path, circle, rect {
+        fill: var(--header-icon-active-color);
+      }
+    }
+  }
+  &.theme-btn {
+    &:active {
+      .header-icon {
+        path, circle, rect {
+          fill: var(--theme-icon-active-color);
+        }
+      }
+    }
+  }
+}
+.util-icon {
+  width:rem(24px);
+  height:rem(24px);
+  svg {
+    width:100%;
+    max-width:rem(24px);
+    height:100%;
+    max-height:rem(24px);
+    object-fit: contain;
   }
 }
 .theme-list {
@@ -197,7 +237,7 @@ path, rect, circle {
 
 .page-visual {
   width:100%;
-  height:100vh;
+  height:calc(100vh - var(--header-height));
   .page-title {
     span {
       font: {
