--- a/portfolio2023_vite/src/scss/projects.scss
+++ b/portfolio2023_vite/src/scss/projects.scss
@@ -1,1 +1,22 @@
 @import './scss_global';
+
+
+.project-list {
+  width:100%;
+  border-top:1px solid #3a3a3a;
+}
+.project-item {
+  width:100%;
+  padding:rem(80px);
+  border-bottom:1px solid #3a3a3a;
+  color:#909090;
+}
+.project-period {
+  .period-bar {
+    display:block;
+    width:rem(56px);
+    height:rem(2px);
+    margin:0 rem(16px);
+    background: #3a3a3a;
+  }
+}
