--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -8,12 +8,12 @@
 html {
   width:100%;
   height:100%;
-  font-size:16px;
-  @media only screen and (max-width:1600px) {
-    font-size:14px;
-  }
-  @media only screen and (max-width:1400px) {
-    font-size:1vw;
+  font-size:1vw;
+  // @media only screen and (max-width:1400px) {
+  //   font-size:.9vw;
+  // }
+  @media only screen and (max-width:1200px) {
+    font-size:10px;
   }
   @media only screen and (max-width:460px) {
     font-size:10px;
@@ -27,7 +27,7 @@ body {
   transition: background-color .3s;
 }
 
-span {
+h1, h2, h3, h4, h5, h6, p, span {
   transition: color .3s;
 }
 path, rect, circle {
@@ -38,6 +38,10 @@ path, rect, circle {
   padding: 0 rem(80px);
 }
 
+.around-padding {
+  padding:0 rem(80px);
+}
+
 .page-container {
   width:100%;
   min-height:100%;
@@ -46,6 +50,14 @@ path, rect, circle {
 .page-header {
   width:100%;
   padding:rem(80px);
+  font-size:rem(20px);
+  // font-size:20px;
+  // @media only screen and (max-width:1600px) {
+  //   font-size:16px;
+  // }
+  // @media only screen and (max-width:1200px) {
+  //   font-size:14px;
+  // }
 }
 
 .current-time {
@@ -53,7 +65,6 @@ path, rect, circle {
   border-bottom:rem(4px) solid transparent;
   padding:0 rem(40px) 0 rem(2px);
   time {
-    font-size:rem(20px);
     font-weight:500;
     color:var(--text-color-4);
   }
@@ -65,7 +76,7 @@ path, rect, circle {
     margin: 0 rem(20px);
     position:relative;
     span {
-      font-size:rem(20px);
+      // font-size:rem(20px);
       color:var(--text-color-0);
       font-weight:500;
     }
@@ -232,31 +243,71 @@ path, rect, circle {
 
 
 
+.page-title-border-text {
+  font: {
+    weight:400;
+    family:'Noto Serif KR';
+  }
+  color:transparent;
+}
+.page-title-filled-text {
+  font-weight:700;
+}
 
 
 
 .page-visual {
   width:100%;
   height:calc(100vh - var(--header-height));
-  .page-title {
-    span {
-      font: {
-        size:rem(240px);
-      }
-      line-height: rem(240px);
-      letter-spacing: rem(-12px);
+  .page-title-text {
+    font: {
+      size:rem(240px);
     }
-    .page-title-border-text {
-      font: {
-        weight:400;
-        family:'Noto Serif KR';
-      }
-      color:transparent;
-      -webkit-text-stroke: 1px var(--text-color-2);
+    line-height: rem(240px);
+  }
+  .page-title-border-text {
+    -webkit-text-stroke: 1px var(--page-title-border);
+  }
+  .page-title-filled-text {
+    color:var(--page-title-filled);
+  }
+}
+
+
+
+
+.page-section {
+  padding-top: rem(240px);
+  padding-bottom: rem(240px);
+}
+
+
+
+
+
+
+.page-footer {
+  width:100%;
+  height:100vh;
+  min-height:rem(920px);
+  padding:rem(80px);
+  .footer-card {
+    width:100%;
+    height:100%;
+    padding:rem(80px);
+    border-radius:rem(80px);
+    background: var(--footer-bg);
+  }
+  .page-title-text {
+    font: {
+      size:rem(160px);
     }
-    .page-title-filled-text {
-      font-weight:700;
-      color:var(--text-color-0);
-    }
+    line-height: rem(160px);
+  }
+  .page-title-border-text {
+    -webkit-text-stroke: 1px var(--footer-page-title-border);
+  }
+  .page-title-filled-text {
+    color:var(--footer-page-title-filled);
   }
 }
