--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -3,6 +3,12 @@
   --screen-size-y: 927px;
   --header-height: 208px;
 
+  --weight-light: 400;
+  --weight-regular: 500;
+  --weight-medium: 700;
+  --weight-bold: 900;
+  --weight-black: 900;
+
   // colors
   --bg-color-0: #fff;
   --bg-color-1: #f5f5f5;
@@ -10,7 +16,7 @@
   --bg-color-3: #a0a0a0;
   --bg-color-4: #909090;
   --bg-color-5: #707070;
-  
+
   --text-color-6: #1a1a1a;
   --text-color-1: #3a3a3a;
   --text-color-2: #5a5a5a;
@@ -20,11 +26,15 @@
   --text-color-6: #ccc;
 
   // page header
-  --header-icon-color: #909090;
-  --header-bg-color: #efefef;
-  --header-icon-hover-color: #5a5a5a;
-  --header-icon-active-color: #1a1a1a;
-  --theme-icon-active-color: #FFC700;
+  --time-bar: #707070;
+  --time-text: #909090;
+  --gnb-menu: #909090;
+  --gnb-menu-hover: #3a3a3a;
+  --header-bg: #efefef;
+  --header-icon: #909090;
+  --header-icon-hover: #5a5a5a;
+  --header-icon-active: #1a1a1a;
+  --theme-icon-active: #FFC700;
 
   // page visual
   --page-title-border: #a0a0a0;
@@ -43,15 +53,21 @@
   --footer-bg: #efefef;
   --footer-page-title-border: #ccc;
   --footer-page-title-filled: #707070;
-  
+
   &.dark-theme {
+    --weight-light: 300;
+    --weight-regular: 400;
+    --weight-medium: 500;
+    --weight-bold: 700;
+    --weight-black: 900;
+
     --bg-color-0: #1a1a1a;
     --bg-color-1: #3a3a3a;
     --bg-color-2: #5a5a5a;
     --bg-color-3: #707070;
     --bg-color-4: #909090;
     --bg-color-5: #a0a0a0;
-    
+
     --text-color-0: #fff;
     --text-color-1: #efefef;
     --text-color-2: #ccc;
@@ -59,18 +75,18 @@
     --text-color-4: #909090;
     --text-color-5: #707070;
     --text-color-6: #5a5a5a;
-    
+
     // page header
-    --header-icon-color: #707070;
-    --header-bg-color: #3a3a3a;
-    --header-icon-hover-color: #ccc;
-    --header-icon-active-color: #fff;
-    --theme-icon-active-color: #FFD12D;
+    --header-icon: #707070;
+    --header-bg: #3a3a3a;
+    --header-icon-hover: #ccc;
+    --header-icon-active: #fff;
+    --theme-icon-active: #FFD12D;
 
     // page visual
     --page-title-border: #a0a0a0;
     --page-title-filled: #ccc;
-    
+
     // section
     --section-header-title: white;
     --section-header-desc: #707070;
@@ -92,7 +108,7 @@
 //     --bg-color-0: #1a1a1a;
 //     --bg-color-1: #3a3a3a;
 //     --bg-color-2: #707070;
-    
+
 //     --text-color-0: #fff;
 //     --text-color-1: #ccc;
 //     --text-color-2: #a0a0a0;
