transition page 작업중

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -31,10 +31,10 @@
   --gnb-menu: #909090;
   --gnb-menu-hover: #3a3a3a;
   --header-bg: #efefef;
-  --header-icon: #909090;
+  --header-icon: #707070;
   --header-icon-hover: #5a5a5a;
   --header-icon-active: #1a1a1a;
-  --theme-icon-active: #FFC700;
+  --theme-icon-active: #ffc700;
 
   // page visual
   --page-title-border: #a0a0a0;
@@ -42,12 +42,12 @@
 
   // section header
   --section-header-title: #3a3a3a;
-  --section-header-desc: #a0a0a0;
+  --section-header-desc: #909090;
 
   // intro section
-  --intro-title: #a0a0a0;
-  --intro-emph: white;
-  --intro-desc: #ccc;
+  --intro-title: #909090;
+  --intro-emph: #3a3a3a;
+  --intro-desc: #707070;
 
   // page-footer
   --footer-bg: #efefef;
@@ -81,7 +81,7 @@
     --header-bg: #3a3a3a;
     --header-icon-hover: #ccc;
     --header-icon-active: #fff;
-    --theme-icon-active: #FFD12D;
+    --theme-icon-active: #ffd12d;
 
     // page visual
     --page-title-border: #a0a0a0;
