--- a/portfolio2023_vite/src/scss/page_transition.scss
+++ b/portfolio2023_vite/src/scss/page_transition.scss
@@ -1,16 +1,16 @@
-.page-move-exit {
+.page-exit {
   transform: translateX(0);
 }
-.page-move-exit-active {
+.page-exit-active {
   transform: translate(100%);
   transition: transform 0.7s;
 }
 
-.page-move-enter {
+.page-enter {
   transform: traslateX(100%);
 }
 
-.page-move-enter-active {
+.page-enter-active {
   transform: translateX(0);
   transition: transform 0.7s;
 }
