--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -25,7 +25,7 @@ html {
 body {
   width: 100%;
   min-height: 100%;
-  background: var(--bg-color-0);
+  background-color: var(--frame-bg);
   transition: background-color 0.3s;
 }
 
@@ -44,6 +44,11 @@ path,
 rect,
 circle {
   transition: fill 0.3s;
+}
+
+.page-bg {
+  background: var(--page-bg);
+  transition: background-color 0.3s;
 }
 
 .side-padding {
@@ -67,27 +72,22 @@ circle {
   font-weight: 700;
 }
 
-.page-visual {
-  height: calc(100vh - var(--header-height));
-
-  .page-title-text {
-    font: {
-      size: rem(240px);
-    }
-
-    line-height: rem(240px);
-  }
-
-  .page-title-border-text {
-    -webkit-text-stroke: 1px var(--page-title-border);
-  }
-
-  .page-title-filled-text {
-    color: var(--page-title-filled);
-  }
+.page-contents-container {
+  margin-top: -var(--header-height);
 }
 
 .page-section {
   padding-top: rem(240px);
   padding-bottom: rem(240px);
+  background-color: var(--page-bg);
+  position: relative;
+  z-index: 100;
+  &.intro-section {
+    background: rgb(26, 26, 26);
+    background: linear-gradient(
+      0deg,
+      rgba(26, 26, 26, 1) 0%,
+      rgba(26, 26, 26, 0) 80%
+    );
+  }
 }
