--- a/portfolio2023_vite/src/scss/pageFooter.scss
+++ b/portfolio2023_vite/src/scss/pageFooter.scss
@@ -26,12 +26,66 @@
   .page-title-filled-text {
     color: var(--footer-page-title-filled);
   }
+}
 
-  .footer-experience {
+.footer-experience {
+  span {
+    color: var(--footer-page-title-filled);
+    line-height: rem(48px);
+    letter-spacing: 0.01em;
+    font: {
+      size: rem(32px);
+      weight: var(--weight-light);
+    }
+  }
+}
+
+.footer-info {
+  dt {
+    margin-bottom: rem(40px);
+    color: var(--footer-info-title);
+    line-height: rem(40px);
+    font: {
+      size: rem(32px);
+      weight: var(--weight-regular);
+    }
+  }
+  .footer-sitemap-btn {
+    height: rem(40px);
+    font: {
+      size: rem(24px);
+      weight: var(--weight-regular);
+    }
     span {
-      font-size: rem(48px);
-      color: var(--footer-page-title-filled);
-      line-height: rem(64px);
+      margin-right: rem(10px);
+      margin-top: rem(-2px);
+      line-height: rem(24px);
+      color: var(--footer-btn);
+    }
+    figure {
+      width: rem(16px);
+      height: rem(16px);
+      font-size: 0;
+      svg {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+    path,
+    circle,
+    rect {
+      fill: var(--footer-icon);
+    }
+    &:hover {
+      span {
+        color: var(--footer-btn-hover);
+      }
+      path,
+      circle,
+      rect {
+        fill: var(--footer-btn-hover);
+      }
     }
   }
 }
